🐛 test correction ios sticky

--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -32,3 +32,7 @@ p {
     border-radius: 3rem;
     font-size: 1.6rem;
 }
+
+.container {
+    max-width: 100% !important;
+}
